...
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="aquilina.ryan.homelightingapp.ui.main_activity.MainActivity"
        android:background="@color/colorSecondaryDark">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/devices_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:paddingBottom="4dp"/>

...
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/raleway_bold"
            android:layout_marginBottom="18dp"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_to_group_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_white_36dp"/>
</android.support.design.widget.CoordinatorLayout>
...
